--- a/Term_Project/sandbox/healthcare-booking-frontend/package.json
+++ b/Term_Project/sandbox/healthcare-booking-frontend/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.5.1",
     "date-fns": "^2.30.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "react": "^18.2.0",
     "react-big-calendar": "^1.8.4",
     "react-dom": "^18.2.0",
