--- a/Term_Project/project_in_progress/backend/package.json
+++ b/Term_Project/project_in_progress/backend/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.6.2",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1"
   },
